[package]
name = "streamdown"
version = "0.1.0"
edition = "2021"
description = "Streaming markdown renderer for terminal output, optimized for LLM responses"
license = "MIT"
repository = "https://github.com/antinomyhq/streamdown"
keywords = ["markdown", "terminal", "streaming", "llm", "cli"]
categories = ["command-line-interface", "text-processing"]

[lib]
name = "streamdown"
path = "src/lib.rs"

[dependencies]
streamdown-parser = { git = "https://github.com/fed-stew/streamdown-rs.git", branch = "main" }
streamdown-core = { git = "https://github.com/fed-stew/streamdown-rs.git", branch = "main" }
syntect = "5.3.0"
colored = "3.0.0"
unicode-width = "0.2"

[dev-dependencies]
indicatif = "0.18"
insta = "1.41"
strip-ansi-escapes = "0.2"
